kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: goweb-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: goweb-app
  template:
    metadata:
      labels:
        app: goweb-app
    spec:
      imagePullSecrets:
      - name: dockerhub-secret
      containers:
      - name: goweb-app
        image: kp3073/go-web-app:6e01d3b90eb0fd032abd971c58c73dcab699b23b
        ports:
        - containerPort: 8080
