kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project
spec:
  selector:
    app.kubernetes.io/name: MyApp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
